test/speg_grammar_fixtures/valid/rule_call.peg
GRAMMAR url

test -> "begin" [0-9] "end";
other -> "A" / [0-9];
other_next -> "A" / test / "sdasda";

next_seq -> other test;
