test/speg_grammar_fixtures/invalid/empty_one_or_more.peg
GRAMMAR url

test -> "begin"+ [0-9] "end";
other -> "A" / +;
other_next -> "A" / + / "sdasda";

next_seq -> + test+;
